# neo_kinematics_differential

./: CMakeLists.txt  README.md  package.xml
common/include/: DiffDrive2WKinematics.h  Kinematics.h
common/src/: DiffDrive2WKinematics.cpp
launch/: test_setup.launch  test_setup.yaml
ros/src/: neo_kinematics_differential_node.cpp
